# SportsPropAnalyzer

./: .gitignore  CLAUDE.md  HANDOFF.md  JIRA  Procfile  README.md  TODO  bets.txt  evaluate_all_bets.py  get_props.py  get_props_file.py  package-lock.json  package.json  pyproject.toml  railway.json  requirements.txt  vercel.json
alphabetter/nba_backend/: database.py  fetch_and_calculate_all.py  fetch_and_store_player_stats.py  fetch_and_store_prop_data.py  fetch_player_stats_espn.py  fetch_player_stats_espn_mlb.py  get_player_db_data.py  init_db.py  main.py  models.py  player_utils.py
alphabetter/nba_backend/common/: nba_api_common.py
alphabetter/nba_backend/crud/: player_gamelogs.py
alphabetter/nba_backend/get_props/: bets.go  gen_prizepicks_json.py  get_props.py
alphabetter/nba_backend/stat_collector/: calculate_and_store_lastx.py  lastx.py  mlb_stat_mapping.py
alphabetter/nba_frontend/: main.py
alphabetter/nba_frontend/alpha-bettor/: package-lock.json  package.json
alphabetter/nba_frontend/alpha-bettor/src/: App.js  PlayerId.js  Props.js  (+1 more)
alphabetter/nba_frontend/my-react-ts-project/: package-lock.json  package.json
alphabetter/nba_frontend/templates/: index.html
get_props/: bets.go  bets.txt  prizepicks_props.json  prizepicks_props.txt
legacy_code/get_props/: bets.go
legacy_code/initial_python_app/: evaluate_all_bets.py  get_props.py  output.txt
legacy_code/initial_python_app/get_props/: prizepicks_props.json
testing/: espn_map_test.py  find_prizepicks_leagues.py  last_percent_algorithm.py  recalc_double_double.py  test_bugfixes.py
(+7 files in other folders)
