[tool.poetry]
name = "alphabetter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "alphabetter"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = ">=0.115.8,<0.116.0"
uvicorn = ">=0.34.0,<0.35.0"
pydantic = ">=2.10.6,<3.0.0"
pandas = ">=2.2.3,<3.0.0"
nba-api = ">=1.7,<2.0"
sqlalchemy = ">=2.0.37,<3.0.0"
psycopg2 = ">=2.9.10,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
